[package]
name = "slang"
version = "0.1.0"
authors = ["Agoston Szepessy <agoston.the.dev@gmail.com>"]
edition = "2018"

[lib]
name = "libslang"
path = "src/libslang/lib.rs"

[dependencies]
lalrpop-util = { version = "0.19.3", default-features = false }
logos = "0.11.4"
thiserror = "1.0.23"

[build-dependencies]
lalrpop = { version = "0.19.3", default-features = false }
