[package]
name = "slang"
version = "0.1.0"
authors = ["Agoston Szepessy <agoston.the.dev@gmail.com>"]
edition = "2021"

[lib]
name = "libslang"
path = "src/libslang/lib.rs"

[dependencies]
lalrpop-util = { version = "0.19.12", default-features = false }
logos = "0.13.0"
thiserror = "1.0"

[build-dependencies]
lalrpop = { version = "0.19.12", default-features = false }
